PHP 8.4 property hook
- continue from @junichi11 pull request without some syntax changes
- Closes #8035

- revert PHP5ErrorHandlerImpl.java changes to avoid changes on some unrelated tests
- unit tests error using curly brackets are affected due to the property hook parser rule