@@ -19,7 +19,6 @@
 package org.netbeans.modules.php.editor.parser.astnodes;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import org.netbeans.api.annotations.common.CheckForNull;
@@ -32,17 +31,44 @@ import org.netbeans.api.annotations.common.CheckForNull;
  * public $a = 3;
  * private static final $var;
  * protected ?int $int = 0; // PHP 7.4
+ * public private(set) string $hooked = "property hook" { // PHP 8.4
+ *     get => "hooked: ". $this->hooked;
+ *     set($value) {
+ *         echo "set: " . $value;
+ *     }
+ * }
  * </pre>
  */
 public class FieldsDeclaration extends BodyDeclaration {
 
     private final List<SingleFieldDeclaration> fields = new ArrayList<>();
     private final Expression fieldType;
+    private final boolean isHooked;
 
-    private FieldsDeclaration(int start, int end, int modifier, Expression fieldType, List<SingleFieldDeclaration> fields, List<Attribute> attributes) {
-        super(start, end, modifier, false, attributes);
-        this.fieldType = fieldType;
-        this.fields.addAll(fields);
+    private FieldsDeclaration(Builder builder) {
+        super(builder.start, builder.end, builder.modifier, false, builder.attributes);
+        this.fieldType = builder.fieldType;
+        boolean isHookedField = false;
+        for (SingleFieldDeclaration field : builder.fields) {
+            if ((fieldType == null && field.getFieldType() == null)
+                    || (fieldType != null && fieldType.equals(field.getFieldType()))) {
+                this.fields.addAll(builder.fields);
+                isHookedField = field.isHooked();
+                break;
+            }
+            SingleFieldDeclaration singleField = new SingleFieldDeclaration.Builder(field.getStartOffset(), field.getEndOffset(), field.getName())
+                    .fieldType(fieldType) // add type
+                    .value(field.getValue())
+                    .propertyHooks(field.getPropertyHooks())
+                    .build();
+            this.fields.add(singleField);
+            if (field.isHooked()) {
+                assert builder.fields.size() == 1 : "FieldsDeclaration can have only one hooked property, but fields size: " + builder.fields.size(); // NOI18N
+                isHookedField = true;
+                break;
+            }
+        }
+        this.isHooked = isHookedField;
     }
 
     public FieldsDeclaration(int start, int end, int modifier, Expression fieldType, List variablesAndDefaults) {
@@ -63,19 +89,17 @@ public class FieldsDeclaration extends BodyDeclaration {
             }
         }
         this.fieldType = fieldType;
+        this.isHooked = false;
     }
 
     public static FieldsDeclaration create(FieldsDeclaration declaration, List<Attribute> attributes) {
         assert attributes != null;
         int start = attributes.isEmpty() ? declaration.getStartOffset() : attributes.get(0).getStartOffset();
-        return new FieldsDeclaration(
-                start,
-                declaration.getEndOffset(),
-                declaration.getModifier(),
-                declaration.getFieldType(),
-                declaration.getFields(),
-                attributes
-        );
+        return new Builder(start, declaration.getEndOffset(), declaration.getModifier())
+                .fieldType(declaration.getFieldType())
+                .fields(declaration.getFields())
+                .attributes(attributes)
+                .build();
     }
 
     /**
@@ -95,16 +119,16 @@ public class FieldsDeclaration extends BodyDeclaration {
         }
         Variable variable = null;
         Expression expression = parameter.getParameterName();
-        if (expression instanceof Reference) {
-            expression = ((Reference) expression).getExpression();
+        if (expression instanceof Reference reference) {
+            expression = reference.getExpression();
         }
-        if (expression instanceof Variadic) {
+        if (expression instanceof Variadic variadic) {
             // just check because the parser accepts it
             // although can't be declared variadic promoted property
-            expression = ((Variadic) expression).getExpression();
+            expression = variadic.getExpression();
         }
-        if (expression instanceof Variable) {
-            variable = (Variable) expression;
+        if (expression instanceof Variable var) {
+            variable = var;
         }
         assert variable != null;
         int start = variable.getStartOffset();
@@ -114,17 +138,16 @@ public class FieldsDeclaration extends BodyDeclaration {
         if (value != null) {
             end = value.getEndOffset();
         }
-        SingleFieldDeclaration singleFieldDeclaration = new SingleFieldDeclaration(start, end, variable, value, type);
-        return FieldsDeclaration.create(
-                new FieldsDeclaration(
-                        parameter.getStartOffset(),
-                        parameter.getEndOffset(),
-                        parameter.getModifier(),
-                        parameter.getParameterType(),
-                        Collections.singletonList(singleFieldDeclaration)
-                ),
-                parameter.getAttributes()
-        );
+        SingleFieldDeclaration singleFieldDeclaration = new SingleFieldDeclaration.Builder(start, end, variable)
+                .value(value)
+                .fieldType(type)
+                .propertyHooks(parameter.getPropertyHooks())
+                .build();
+        return new Builder(parameter.getStartOffset(), parameter.getEndOffset(), parameter.getModifier())
+                .fieldType(parameter.getParameterType())
+                .fields(List.of(singleFieldDeclaration))
+                .attributes(parameter.getAttributes())
+                .build();
     }
 
     private SingleFieldDeclaration createField(Variable name, Expression value, Expression fieldType) {
@@ -140,7 +163,7 @@ public class FieldsDeclaration extends BodyDeclaration {
      * @return List of single fields
      */
     public List<SingleFieldDeclaration> getFields() {
-        return Collections.unmodifiableList(this.fields);
+        return List.copyOf(fields);
     }
 
     public Expression[] getInitialValues() {
@@ -166,6 +189,16 @@ public class FieldsDeclaration extends BodyDeclaration {
         return fieldType;
     }
 
+    /**
+     * Check whether this is a hooked field(property).
+     *
+     * @return {@code true} if this is hooked field, {@code false} otherwise
+     * @since 2.45.0
+     */
+    public boolean isHooked() {
+        return isHooked;
+    }
+
     @Override
     public void accept(Visitor visitor) {
         visitor.visit(this);
@@ -188,4 +221,39 @@ public class FieldsDeclaration extends BodyDeclaration {
                 + sb.toString();
     }
 
+    //~ Inner class
+    public static class Builder {
+
+        private final int start;
+        private final int end;
+        private final int modifier;
+        private List<SingleFieldDeclaration> fields = List.of();
+        private List<Attribute> attributes = List.of();
+        private Expression fieldType = null;
+
+        public Builder(int start, int end, Integer modifier) {
+            this.start = start;
+            this.end = end;
+            this.modifier = modifier == null ? 0 : modifier;
+        }
+
+        public Builder fieldType(Expression fieldType) {
+            this.fieldType = fieldType;
+            return this;
+        }
+
+        public Builder fields(List<SingleFieldDeclaration> fields) {
+            this.fields = List.copyOf(fields);
+            return this;
+        }
+
+        public Builder attributes(List<Attribute> attributes) {
+            this.attributes = List.copyOf(attributes);
+            return this;
+        }
+
+        public FieldsDeclaration build() {
+            return new FieldsDeclaration(this);
+        }
+    }
 }
