@@ -21,7 +21,6 @@ package org.netbeans.modules.php.editor.verification;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -53,8 +52,10 @@ import org.netbeans.modules.php.editor.model.FileScope;
 import org.netbeans.modules.php.editor.model.InterfaceScope;
 import org.netbeans.modules.php.editor.model.MethodScope;
 import org.netbeans.modules.php.editor.model.ModelUtils;
+import org.netbeans.modules.php.editor.model.PropertyHookScope;
 import org.netbeans.modules.php.editor.model.Scope;
 import org.netbeans.modules.php.editor.model.TraitScope;
+import org.netbeans.modules.php.editor.model.TypeScope;
 import org.netbeans.modules.php.editor.parser.PHPParseResult;
 import org.netbeans.modules.php.editor.parser.astnodes.Attribute;
 import org.netbeans.modules.php.editor.parser.astnodes.AttributeDeclaration;
@@ -79,8 +80,8 @@ public class ModifiersCheckHintError extends HintErrorRule {
     private FileObject fileObject;
     private BaseDocument doc;
     private TokenSequence<PHPTokenId> ts;
-    private boolean currentClassHasAbstractMethod = false;
-    private static final Set<PHPTokenId> MODIFIERS = new HashSet<>(Arrays.asList(
+    private boolean currentClassHasAbstractMember = false;
+    private static final Set<PHPTokenId> MODIFIERS = Set.of(
             PHPTokenId.PHP_PUBLIC,
             PHPTokenId.PHP_PROTECTED,
             PHPTokenId.PHP_PRIVATE,
@@ -91,7 +92,7 @@ public class ModifiersCheckHintError extends HintErrorRule {
             PHPTokenId.PHP_READONLY,
             PHPTokenId.PHP_ABSTRACT,
             PHPTokenId.PHP_FINAL
-    ));
+    );
 
     protected PhpVersion getPhpVersion() {
         return CodeUtils.getPhpVersion(fileObject);
@@ -240,10 +241,10 @@ public class ModifiersCheckHintError extends HintErrorRule {
         processClassConstants(classScope.getDeclaredConstants());
         processFields(classScope.getDeclaredFields(), classScope.isReadonly());
         processMethods(classScope.getDeclaredMethods());
-        if (currentClassHasAbstractMethod) {
+        if (currentClassHasAbstractMember) {
             processPossibleAbstractClass(classScope);
         }
-        currentClassHasAbstractMethod = false;
+        currentClassHasAbstractMember = false;
     }
 
     private void processEnumScope(EnumScope enumScope) {
@@ -445,40 +446,51 @@ public class ModifiersCheckHintError extends HintErrorRule {
         "InvalidEmptyTypeAsymmetricVisiblilityProperty=Asymmetric visibility property \"{0}\" must have type",
         "# {0} - Field name",
         "InvalidStaticReadonlyProperty=Static property \"{0}\" cannot be readonly",
+        "# {0} - Field name",
+        "InvalidStaticHookedProperty=Static property \"{0}\" cannot have property hooks",
         "InvalidStaticAsymmetricVisibilityProperty=Static property may not have asymmetric visibility",
         "# {0} - Visibility",
         "# {1} - Field name",
         "# {2} - Set visibility",
         "InvalidAsymmetricProperty=Visibility({0}) of property \"{1}\" must not be weaker than set visibility({2})",
         "InvalidFinalPrivateProperty=Private field cannot be final.",
+        "InvalidAbstractPrivateProperty=Hooked property cannot be both private and abstract",
     })
     private void processFieldElement(FieldElement fieldElement, boolean isReadonlyClass) {
         PhpModifiers phpModifiers = fieldElement.getPhpModifiers();
-        List<HintFix> fixes;
-        String invalidModifier;
         int typeStart = getTypeStart(fieldElement.getOffset() - 1, fieldElement.getDefaultType()); // -1:$
-        if (phpModifiers.isAbstract()) {
-            invalidModifier = PhpModifiers.ABSTRACT_MODIFIER;
-            fixes = Collections.<HintFix>singletonList(new RemoveModifierFix(doc, invalidModifier, typeStart));
+        if (phpModifiers.isAbstract() && !FieldElement.isHooked(fieldElement)) {
+            String invalidModifier = PhpModifiers.ABSTRACT_MODIFIER;
+            List<HintFix> fixes = List.of(new RemoveModifierFix(doc, invalidModifier, typeStart));
             hints.add(new SimpleHint(Bundle.InvalidField(fieldElement.getName(), invalidModifier), fieldElement.getNameRange(), fixes));
         } else if (phpModifiers.isFinal() && !getPhpVersion().hasFinalProperty()) {
-            invalidModifier = PhpModifiers.FINAL_MODIFIER;
-            fixes = Collections.<HintFix>singletonList(new RemoveModifierFix(doc, invalidModifier, typeStart));
+            String invalidModifier = PhpModifiers.FINAL_MODIFIER;
+            List<HintFix> fixes = List.of(new RemoveModifierFix(doc, invalidModifier, typeStart));
             hints.add(new SimpleHint(Bundle.InvalidField(fieldElement.getName(), invalidModifier), fieldElement.getNameRange(), fixes));
         } else if (phpModifiers.isFinal() && phpModifiers.isPrivate()) {
             // final private int $prop;
-            fixes = new ArrayList<>();
-            fixes.add(new RemoveModifierFix(doc, PhpModifiers.FINAL_MODIFIER, typeStart));
-            fixes.add(new RemoveModifierFix(doc, PhpModifiers.VISIBILITY_PRIVATE, typeStart));
+            List<HintFix> fixes = List.of(
+                    new RemoveModifierFix(doc, PhpModifiers.FINAL_MODIFIER, typeStart),
+                    new RemoveModifierFix(doc, PhpModifiers.VISIBILITY_PRIVATE, typeStart)
+            );
             hints.add(new SimpleHint(Bundle.InvalidFinalPrivateProperty(), fieldElement.getNameRange(), fixes));
         } else if (phpModifiers.isStatic() && (phpModifiers.isReadonly() || isReadonlyClass)) {
             // e.g. public static readonly $prop;
-            fixes = new ArrayList<>();
+            List<HintFix> fixes = new ArrayList<>();
             fixes.add(new RemoveModifierFix(doc, PhpModifiers.STATIC_MODIFIER, typeStart));
             if (phpModifiers.isReadonly()) {
                 fixes.add(new RemoveModifierFix(doc, PhpModifiers.READONLY_MODIFIER, typeStart));
             }
             hints.add(new SimpleHint(Bundle.InvalidStaticReadonlyProperty(fieldElement.getName()), fieldElement.getNameRange(), fixes));
+        } else if (phpModifiers.isStatic() && FieldElement.isHooked(fieldElement)) {
+            // public static $prop {get{}}
+            List<HintFix> fixes = List.of(new RemoveModifierFix(doc, PhpModifiers.STATIC_MODIFIER, typeStart));
+            hints.add(new SimpleHint(Bundle.InvalidStaticHookedProperty(fieldElement.getName()), fieldElement.getNameRange(), fixes));
+        } else if ((phpModifiers.isReadonly() || isReadonlyClass)
+                && FieldElement.isHooked(fieldElement)) {
+            String invalidModifier = PhpModifiers.READONLY_MODIFIER;
+            List<HintFix> fixes = isReadonlyClass ? List.of() : List.of(new RemoveModifierFix(doc, invalidModifier, typeStart));
+            hints.add(new SimpleHint(Bundle.InvalidField(fieldElement.getName(), invalidModifier), fieldElement.getNameRange(), fixes));
         } else if ((phpModifiers.isReadonly() || isReadonlyClass)
                 && fieldElement.getDefaultTypeNames().isEmpty()) {
             // e.g. public readonly $prop;
@@ -488,27 +500,109 @@ public class ModifiersCheckHintError extends HintErrorRule {
             hints.add(new SimpleHint(Bundle.InvalidEmptyTypeAsymmetricVisiblilityProperty(fieldElement.getName()), fieldElement.getNameRange(), Collections.emptyList()));
         } else if (hasMultipleAccessTypeModifiers(phpModifiers)) {
             // e.g. public private $prop; public(set) private(set) $prop;
-            fixes = getMultipleAccessTypeModifiersFixes(phpModifiers, typeStart);
+            List<HintFix> fixes = getMultipleAccessTypeModifiersFixes(phpModifiers, typeStart);
             hints.add(new SimpleHint(Bundle.MultipleAccesTypeModifiers(), fieldElement.getNameRange(), fixes));
         } else if (phpModifiers.isStatic() && Modifier.isSetVisibilityModifier(phpModifiers.toFlags())) {
             // e.g. static private(set) $prop;
-            fixes = new ArrayList<>();
-            invalidModifier = getSetVisibility(phpModifiers);
-            fixes.add(new RemoveModifierFix(doc, PhpModifiers.STATIC_MODIFIER, typeStart));
-            fixes.add(new RemoveModifierFix(doc, invalidModifier, typeStart));
+            String invalidModifier = getSetVisibility(phpModifiers);
+            List<HintFix> fixes = List.of(
+                    new RemoveModifierFix(doc, PhpModifiers.STATIC_MODIFIER, typeStart),
+                    new RemoveModifierFix(doc, invalidModifier, typeStart)
+            );
             hints.add(new SimpleHint(Bundle.InvalidStaticAsymmetricVisibilityProperty(), fieldElement.getNameRange(), fixes));
         } else if (isVisibilityWeakerThanSet(phpModifiers)) {
             // e.g. private public(set) $prop;
             String visibility = getVisibility(phpModifiers);
             String setVisibility = getSetVisibility(phpModifiers);
             hints.add(new SimpleHint(Bundle.InvalidAsymmetricProperty(visibility, fieldElement.getName(), setVisibility),
-                    fieldElement.getNameRange(), Collections.emptyList()));
+                    fieldElement.getNameRange(), List.of()));
         } else if (hasMultipleSameModifier(typeStart)) {
             String multipleSameModifier = getMultipleSameModifiers(ts, typeStart);
             // e.g. public public $prop;
-            fixes = Collections.<HintFix>singletonList(new RemoveModifierFix(doc, multipleSameModifier, typeStart));
+            List<HintFix> fixes = List.of(new RemoveModifierFix(doc, multipleSameModifier, typeStart));
             hints.add(new SimpleHint(Bundle.InvalidMultipleModifiers(multipleSameModifier), fieldElement.getNameRange(), fixes));
+        } else if (phpModifiers.isPrivate() && phpModifiers.isAbstract() && FieldElement.isHooked(fieldElement)) {
+            // e.g. private abstract $prop {get; set;}
+            List<HintFix> fixes = List.of(
+                    new RemoveModifierFix(doc, PhpModifiers.VISIBILITY_PRIVATE, typeStart),
+                    new RemoveModifierFix(doc, PhpModifiers.ABSTRACT_MODIFIER, typeStart)
+            );
+            hints.add(new SimpleHint(Bundle.InvalidAbstractPrivateProperty(), fieldElement.getNameRange(), fixes));
         }
+        Scope inScope = fieldElement.getInScope();
+        if (phpModifiers.isAbstract() && FieldElement.isHooked(fieldElement) && isClass(inScope) && !isAnonymousClass(inScope)) {
+            currentClassHasAbstractMember = true;
+        }
+
+        // property hooks
+        if (fieldElement instanceof FieldElement.HookedFieldElement hookedFieldElement) {
+            processPropertyHooks(hookedFieldElement.getPropertyHooks(), hookedFieldElement.getPhpModifiers().isAbstract());
+        }
+    }
+
+    @Messages({
+        "AbstractPropertyHookWithBlock=Abstract property hook must specify at least one abstract hook"
+    })
+    private void processPropertyHooks(Collection<? extends PropertyHookScope> propertyHooks, boolean isAbstract) {
+        List<PropertyHookScope> hasBodies = new ArrayList<>(propertyHooks.size());
+        for (PropertyHookScope propertyHook : propertyHooks) {
+            if (CancelSupport.getDefault().isCancelled()) {
+                return;
+            }
+            processPropertyHook(propertyHook);
+            if (propertyHook.hasBody()) {
+                hasBodies.add(propertyHook);
+            }
+        }
+        if (isAbstract && hasBodies.size() == propertyHooks.size()) {
+            // public abstract $prop {get{} set{}}
+            for (PropertyHookScope hook : hasBodies) {
+                if (CancelSupport.getDefault().isCancelled()) {
+                    return;
+                }
+                hints.add(new SimpleHint(Bundle.AbstractPropertyHookWithBlock(), hook.getNameRange()));
+            }
+        }
+    }
+
+    @Messages({
+        "# {0} - Property hook name",
+        "# {1} - Modifier name",
+        "InvalidPropertyHook=Property hook \"{0}\" cannot be declared {1}",
+         "# {0} - Property hook name",
+        "NonAbstractPropertyHookWithoutBlock=Non-abstract property hook \"{0}\" must have a body",
+        "# {0} - Property hook name",
+        "InvalidPrivateFinalPropertyHook=Private property hook \"{0}\" cannot be final"
+   })
+    private void processPropertyHook(PropertyHookScope propertyHook) {
+        PhpModifiers phpModifiers = propertyHook.getPhpModifiers();
+        String invalidModifier = getInvalidPropertyHookModifier(phpModifiers);
+        FieldElement field = (FieldElement) propertyHook.getInScope();
+        if (!StringUtils.isEmpty(invalidModifier)) {
+            List<HintFix> fixes = List.of(new RemoveModifierFix(doc, invalidModifier, propertyHook.getOffset()));
+            hints.add(new SimpleHint(Bundle.InvalidPropertyHook(propertyHook.getName(), invalidModifier), propertyHook.getNameRange(), fixes));
+        } else if (!propertyHook.hasBody() && !propertyHook.getInScope().getPhpModifiers().isAbstract()) {
+            // non-abstract property hook must have a body
+            // e.g. public $prop {get;}
+            hints.add(new SimpleHint(Bundle.NonAbstractPropertyHookWithoutBlock(propertyHook.getName()), propertyHook.getNameRange()));
+        } else if (phpModifiers.isFinal()) {
+            // e.g. private $prop {final get {}}
+            PhpModifiers fieldModifier = propertyHook.getInScope().getPhpModifiers();
+            if (fieldModifier.isPrivate()) {
+                List<HintFix> fixes = List.of(new RemoveModifierFix(doc, PhpModifiers.FINAL_MODIFIER, propertyHook.getOffset()));
+                hints.add(new SimpleHint(Bundle.InvalidPrivateFinalPropertyHook(propertyHook.getName()), propertyHook.getNameRange(), fixes));
+            }
+        }
+    }
+
+    private String getInvalidPropertyHookModifier(PhpModifiers phpModifiers) {
+        // final modifier is OK
+        List<String> invalidModifiers = List.of(
+                PhpModifiers.ABSTRACT_MODIFIER, PhpModifiers.READONLY_MODIFIER, PhpModifiers.STATIC_MODIFIER,
+                PhpModifiers.VISIBILITY_PUBLIC, PhpModifiers.VISIBILITY_PROTECTED, PhpModifiers.VISIBILITY_PRIVATE,
+                PhpModifiers.VISIBILITY_PUBLIC_SET, PhpModifiers.VISIBILITY_PROTECTED_SET, PhpModifiers.VISIBILITY_PRIVATE_SET
+        );
+        return getInvalidModifier(phpModifiers, invalidModifiers);
     }
 
     private void processMethods(Collection<? extends MethodScope> declaredMethods) {
@@ -538,8 +632,8 @@ public class ModifiersCheckHintError extends HintErrorRule {
         PhpModifiers phpModifiers = methodScope.getPhpModifiers();
         List<HintFix> fixes;
         Scope inScope = methodScope.getInScope();
-        boolean isClass = inScope instanceof ClassScope;
-        boolean isAnonClass = isClass && ((ClassScope) inScope).isAnonymous();
+        boolean isClass = isClass(inScope);
+        boolean isAnonClass = isAnonymousClass(inScope);
         boolean isTrait = inScope instanceof TraitScope;
         boolean isEnum = inScope instanceof EnumScope;
         if (phpModifiers.isAbstract() && isAnonClass) {
@@ -592,8 +686,19 @@ public class ModifiersCheckHintError extends HintErrorRule {
             addInvalidMultipleSameModifierHint(methodScope);
         }
         if (phpModifiers.isAbstract() && isClass && !isAnonClass) {
-            currentClassHasAbstractMethod = true;
+            currentClassHasAbstractMember = true;
         }
+    }
+
+    private boolean isClass(Scope scope) {
+        return scope instanceof ClassScope;
+    }
+
+    private boolean isAnonymousClass(Scope scope) {
+        if (scope instanceof ClassScope classScope) {
+            return classScope.isAnonymous();
+        }
+        return false;
     }
 
     private void addInvalidMultipleSameModifierHint(MethodScope methodScope) {
@@ -768,6 +873,17 @@ public class ModifiersCheckHintError extends HintErrorRule {
             }
             processInterfaceClassConstant(declaredConstant);
         }
+
+        // PHP 8.4 interface can have hooked fields
+        if (interfaceScope instanceof TypeScope.FieldDeclarable fieldDeclarable) {
+            Collection<? extends FieldElement> declaredFields = fieldDeclarable.getDeclaredFields();
+            for (FieldElement declaredField : declaredFields) {
+                if (CancelSupport.getDefault().isCancelled()) {
+                    return;
+                }
+                processInterfaceField(declaredField);
+            }
+        }
     }
 
     @Messages({
@@ -859,19 +975,174 @@ public class ModifiersCheckHintError extends HintErrorRule {
     }
 
     @Messages({
+        "# {0} - Field name",
+        "# {1} - Modifier name",
+        "InvalidIfaceField=Interface field \"{0}\" cannot be declared {1}",
+    })
+    private void processInterfaceField(FieldElement fieldElement) {
+        PhpModifiers phpModifiers = fieldElement.getPhpModifiers();
+        String invalidVisibility = getInvalidInterfaceFieldVisibility(phpModifiers);
+        List<String> invalidModifiers = List.of(PhpModifiers.FINAL_MODIFIER, PhpModifiers.ABSTRACT_MODIFIER, PhpModifiers.READONLY_MODIFIER);
+        String invalidModifier = getInvalidModifier(phpModifiers, invalidModifiers);
+        int typeStart = getTypeStart(fieldElement.getOffset() - 1, fieldElement.getDefaultType()); // -1:$
+        if (!StringUtils.isEmpty(invalidModifier)) {
+            addInvalidInterfaceFiledHint(fieldElement, invalidModifier, typeStart);
+        } else if (!StringUtils.isEmpty(invalidVisibility)) {
+            if (PhpModifiers.isSetVisibilityModifier(phpModifiers.toFlags()) && phpModifiers.isPublic() && !phpModifiers.isImplicitPublic()) {
+                addInvalidInterfaceFiledHint(fieldElement, invalidVisibility, typeStart);
+            } else {
+                addInvalidInterfaceFiledHint(fieldElement, invalidVisibility, PhpModifiers.VISIBILITY_PUBLIC, typeStart);
+            }
+        }
+
+        // propertry hooks
+        if (FieldElement.isHooked(fieldElement)) {
+            FieldElement.HookedFieldElement hookedField = (FieldElement.HookedFieldElement) fieldElement;
+            Collection<? extends PropertyHookScope> propertyHooks = hookedField.getPropertyHooks();
+            for (PropertyHookScope propertyHook : propertyHooks) {
+                if (CancelSupport.getDefault().isCancelled()) {
+                    return;
+                }
+                processInterfacePropertyHook(propertyHook);
+            }
+        }
+    }
+
+    private String getInvalidInterfaceFieldVisibility(PhpModifiers phpModifiers) {
+        String visibility = CodeUtils.EMPTY_STRING;
+        if (phpModifiers.isPublic() && !phpModifiers.isImplicitPublic()) {
+            if (phpModifiers.isProtectedSet()
+                    || phpModifiers.isPrivateSet()) {
+                visibility = getSetVisibility(phpModifiers);
+            }
+        } else if (phpModifiers.isPrivate()
+                || phpModifiers.isProtected()
+                || phpModifiers.isProtectedSet()
+                || phpModifiers.isPrivateSet()) {
+            visibility = getVisibility(phpModifiers);
+            if (StringUtils.isEmpty(visibility)) {
+                visibility = getSetVisibility(phpModifiers);
+            }
+        }
+        return visibility;
+    }
+
+    private void addInvalidInterfaceFiledHint(FieldElement fieldElement, String invalidModifier, int typeStart) {
+        List<HintFix> fixes = List.of(new RemoveModifierFix(doc, invalidModifier, typeStart));
+        hints.add(new SimpleHint(Bundle.InvalidIfaceField(fieldElement.getName(), invalidModifier), fieldElement.getNameRange(), fixes));
+    }
+
+    private void addInvalidInterfaceFiledHint(FieldElement fieldElement, String invalidModifier, String newModifier, int typeStart) {
+        List<HintFix> fixes = List.of(new ChangeModifierFix(doc, invalidModifier, newModifier, typeStart));
+        hints.add(new SimpleHint(Bundle.InvalidIfaceField(fieldElement.getName(), invalidModifier), fieldElement.getNameRange(), fixes));
+    }
+
+    @Messages({
+        "# {0} - Property hook name",
+        "# {1} - Modifier name",
+        "InvalidIfacePropertyHook=Interface property hook \"{0}\" cannot be declared {1}",
+        "# {0} - Property hook name",
+        "IfacePropertyHookWithBlock=Interface property hook \"{0}\" cannot contain body"
+    })
+    private void processInterfacePropertyHook(PropertyHookScope propertyHook) {
+        PhpModifiers phpModifiers = propertyHook.getPhpModifiers();
+        String invalidModifier = getInvalidInterfacePropertyHookModifier(phpModifiers);
+        if (!StringUtils.isEmpty(invalidModifier)) {
+            List<HintFix> fixes = List.of(new RemoveModifierFix(doc, invalidModifier, propertyHook.getOffset()));
+            hints.add(new SimpleHint(Bundle.InvalidIfacePropertyHook(propertyHook.getName(), invalidModifier), propertyHook.getNameRange(), fixes));
+        } else if (propertyHook.getBlockRange() != null && propertyHook.getBlockRange().getLength() != 1) {
+            List<HintFix> fixes = List.of(new RemoveBodyFix(doc, propertyHook));
+            hints.add(new SimpleHint(Bundle.IfacePropertyHookWithBlock(propertyHook.getName()), propertyHook.getNameRange(), fixes));
+        }
+    }
+
+    private String getInvalidInterfacePropertyHookModifier(PhpModifiers phpModifiers){
+        List<String> invalidModifiers = List.of(
+                PhpModifiers.ABSTRACT_MODIFIER, PhpModifiers.FINAL_MODIFIER, PhpModifiers.READONLY_MODIFIER, PhpModifiers.STATIC_MODIFIER,
+                PhpModifiers.VISIBILITY_PUBLIC, PhpModifiers.VISIBILITY_PROTECTED, PhpModifiers.VISIBILITY_PRIVATE,
+                PhpModifiers.VISIBILITY_PUBLIC_SET, PhpModifiers.VISIBILITY_PROTECTED_SET, PhpModifiers.VISIBILITY_PRIVATE_SET
+        );
+        return getInvalidModifier(phpModifiers, invalidModifiers);
+    }
+
+    private String getInvalidModifier(PhpModifiers phpModifiers, List<String> invalidModifiers) {
+        String invalidModifier = CodeUtils.EMPTY_STRING;
+        for (String modifier : invalidModifiers) {
+            switch (modifier) {
+                case PhpModifiers.ABSTRACT_MODIFIER -> {
+                    if (phpModifiers.isAbstract()) {
+                        invalidModifier = modifier;
+                    }
+                }
+                case PhpModifiers.FINAL_MODIFIER -> {
+                    if (phpModifiers.isFinal()) {
+                        invalidModifier = modifier;
+                    }
+                }
+                case PhpModifiers.READONLY_MODIFIER -> {
+                    if (phpModifiers.isReadonly()) {
+                        invalidModifier = modifier;
+                    }
+                }
+                case PhpModifiers.STATIC_MODIFIER -> {
+                    if (phpModifiers.isStatic()) {
+                        invalidModifier = modifier;
+                    }
+                }
+                case PhpModifiers.VISIBILITY_PUBLIC -> {
+                    if (phpModifiers.isPublic() && !phpModifiers.isImplicitPublic()) {
+                        invalidModifier = modifier;
+                    }
+                }
+                case PhpModifiers.VISIBILITY_PROTECTED -> {
+                    if (phpModifiers.isProtected()) {
+                        invalidModifier = modifier;
+                    }
+                }
+                case PhpModifiers.VISIBILITY_PRIVATE -> {
+                    if (phpModifiers.isPrivate()) {
+                        invalidModifier = modifier;
+                    }
+                }
+                case PhpModifiers.VISIBILITY_PUBLIC_SET -> {
+                    if (phpModifiers.isPublicSet()) {
+                        invalidModifier = modifier;
+                    }
+                }
+                case PhpModifiers.VISIBILITY_PROTECTED_SET -> {
+                    if (phpModifiers.isProtectedSet()) {
+                        invalidModifier = modifier;
+                    }
+                }
+                case PhpModifiers.VISIBILITY_PRIVATE_SET -> {
+                    if (phpModifiers.isPrivateSet()) {
+                        invalidModifier = modifier;
+                    }
+                }
+                default -> {
+                    assert false : modifier;
+                }
+            }
+            if (!StringUtils.isEmpty(invalidModifier)) {
+                break;
+            }
+        }
+        return invalidModifier;
+    }
+
+    @Messages({
         "# {0} - Class name",
-        "PossibleAbstractClass=Class \"{0}\" contains abstract methods and must be declared abstract",
+        "PossibleAbstractClass=Class \"{0}\" contains abstract members and must be declared abstract",
         "# {0} - Class name",
-        "FinalPossibleAbstractClass=Class \"{0}\" contains abstract methods and can not be declared final"
+        "FinalPossibleAbstractClass=Class \"{0}\" contains abstract members and can not be declared final"
     })
     private void processPossibleAbstractClass(ClassScope classScope) {
-        List<HintFix> fixes;
         if (!classScope.isAbstract()) {
-            fixes = Collections.<HintFix>singletonList(new AddModifierFix(doc, PhpModifiers.ABSTRACT_MODIFIER, classScope.getOffset()));
+            List<HintFix> fixes = List.of(new AddModifierFix(doc, PhpModifiers.ABSTRACT_MODIFIER, classScope.getOffset()));
             hints.add(new SimpleHint(Bundle.PossibleAbstractClass(classScope.getName()), classScope.getNameRange(), fixes));
         }
         if (classScope.isFinal()) {
-            fixes = Collections.<HintFix>singletonList(new RemoveModifierFix(doc, PhpModifiers.FINAL_MODIFIER, classScope.getOffset()));
+            List<HintFix> fixes = List.of(new RemoveModifierFix(doc, PhpModifiers.FINAL_MODIFIER, classScope.getOffset()));
             hints.add(new SimpleHint(Bundle.FinalPossibleAbstractClass(classScope.getName()), classScope.getNameRange(), fixes));
         }
     }
@@ -908,46 +1179,54 @@ public class ModifiersCheckHintError extends HintErrorRule {
     }
 
     private class RemoveBodyFix extends AbstractHintFix {
-        private final MethodScope methodScope;
 
-        public RemoveBodyFix(BaseDocument doc, MethodScope methodScope) {
+        private final Scope scope;
+
+        public RemoveBodyFix(BaseDocument doc, Scope scope) {
             super(doc);
-            this.methodScope = methodScope;
+            assert scope instanceof MethodScope || scope instanceof PropertyHookScope
+                    : "Unexpected scope: " + scope; // NOI18N
+            this.scope = scope;
         }
 
         @Override
         @Messages({
-            "# {0} - Method name",
-            "RemoveBodyFixDesc=Remove body of the method: {0}"
+            "RemoveBodyFix.Method=method",
+            "RemoveBodyFix.PropertyHook=property hook",
+            "# {0} - member name",
+            "# {1} - name",
+            "RemoveBodyFixDesc=Remove body of the {0}: {1}"
         })
         public String getDescription() {
-            return Bundle.RemoveBodyFixDesc(methodScope.getName());
+            return Bundle.RemoveBodyFixDesc(getMemberTypeName(), scope.getName());
+        }
+
+        private String getMemberTypeName() {
+            if (scope instanceof MethodScope) {
+                return Bundle.RemoveBodyFix_Method();
+            } else if (scope instanceof PropertyHookScope) {
+                return Bundle.RemoveBodyFix_PropertyHook();
+            }
+            return "Unknown"; // NOI18N
         }
 
         @Override
         public void implement() throws Exception {
             EditList edits = new EditList(doc);
-            edits.replace(methodScope.getBlockRange().getStart(), methodScope.getBlockRange().getLength(), ";", true, 0); //NOI18N
+            edits.replace(scope.getBlockRange().getStart(), scope.getBlockRange().getLength(), ";", true, 0); //NOI18N
             edits.apply();
         }
 
     }
 
-    private class RemoveModifierFix extends AbstractHintFix {
-
-        private final String modifier;
-        private final int elementOffset;
-        private final OffsetRange offsetRange;
+    private class RemoveModifierFix extends ChangeModifierFix {
 
         public RemoveModifierFix(BaseDocument doc, String modifier, int elementOffset) {
             this(doc, modifier, elementOffset, null);
         }
 
         public RemoveModifierFix(BaseDocument doc, String modifier, int elementOffset, OffsetRange offsetRange) {
-            super(doc);
-            this.offsetRange = offsetRange;
-            this.modifier = modifier;
-            this.elementOffset = elementOffset;
+            super(doc, modifier, CodeUtils.EMPTY_STRING, elementOffset, offsetRange);
         }
 
         @Override
@@ -957,6 +1236,36 @@ public class ModifiersCheckHintError extends HintErrorRule {
         })
         public String getDescription() {
             return Bundle.RemoveModifierFixDesc(modifier);
+        }
+    }
+
+    private class ChangeModifierFix extends AbstractHintFix {
+
+        protected final String modifier;
+        private final int elementOffset;
+        private final OffsetRange offsetRange;
+        private final String newModifier;
+
+        public ChangeModifierFix(BaseDocument doc, String modifier, String newModifier, int elementOffset) {
+            this(doc, modifier, newModifier, elementOffset, null);
+        }
+
+        public ChangeModifierFix(BaseDocument doc, String modifier, String newModifier, int elementOffset, OffsetRange offsetRange) {
+            super(doc);
+            this.offsetRange = offsetRange;
+            this.modifier = modifier;
+            this.newModifier = newModifier;
+            this.elementOffset = elementOffset;
+        }
+
+        @Override
+        @Messages({
+            "# {0} - Old modifier name",
+            "# {1} - New modifier name",
+            "ChangeModifierFixDesc=Change modifier: {0} to {1}"
+        })
+        public String getDescription() {
+            return Bundle.ChangeModifierFixDesc(modifier, newModifier);
         }
 
         @Override
@@ -977,7 +1286,8 @@ public class ModifiersCheckHintError extends HintErrorRule {
                     startOffset += lastIndexOfModifier;
                     text = text.substring(lastIndexOfModifier);
                 }
-                String replaceText = text.replace(modifier + " ", "").replaceAll("^\\s+", ""); //NOI18N
+                String newMod = StringUtils.isEmpty(newModifier) ? CodeUtils.EMPTY_STRING : newModifier + " "; // NOI18N
+                String replaceText = text.replace(modifier + " ", newMod).replaceAll("^\\s+", CodeUtils.EMPTY_STRING); //NOI18N
                 edits.replace(startOffset, length, replaceText, true, 0);
             }
             edits.apply();
